# axum-static

./: Caddyfile-proxy  Caddyfile-spa  Cargo.toml  Dockerfile-proxy  Dockerfile-rust-embed  Dockerfile-spa  docker-compose.yaml
assets/: index.html
assets/assets/: index-a349cd8c.css  index-c805c65e.js
src/: main.rs  serve-dir.rs
